Give XSLT transformed documents a container so that events and focus work properly. Bug 236596. r/sr=peterv